namespace TestApp.Application.Interfaces;
public interface IUserService
{
    void RegisterUser(string name, string email);
}